이미지 추가함

--- a/_posts/2024-08-09-week_1.md
+++ b/_posts/2024-08-09-week_1.md
@@ -120,5 +120,4 @@ CustomDataset
 DataLoader(train_dataset, batch_size= , shuffle = )
 ```
 
-
-
+![image-20240811144633911](C:\Users\sw00h\OneDrive\문서\sun00hwn_github_blog\sun00hwn.github.io\images\2024-08-09-week_1\image-20240811144633911.png)
