이미지 삽입

--- a/_posts/2024-08-09-week_1.md
+++ b/_posts/2024-08-09-week_1.md
@@ -1,6 +1,7 @@
 ---
 layout: single
 title:  "주간학습정리 Pytorch"
+typora-root-url:../
 ---
 #### 배운 내용을 필요할 때 찾아볼 수 있게 가이드북 형태로 작성
 ### 수정 예정
@@ -122,4 +123,4 @@ DataLoader(train_dataset, batch_size= , shuffle = )
 
 ![image-20240811145221358](C:\Users\sw00h\OneDrive\문서\sun00hwn_github_blog\sun00hwn.github.io\images\2024-08-09-week_1\image-20240811145221358.png)
 
-![image-20240811145433239](C:\Users\sw00h\OneDrive\문서\sun00hwn_github_blog\sun00hwn.github.io\images\2024-08-09-week_1\image-20240811145433239.png)
+![image-20240811145433239](/images/2024-08-09-week_1/554a3540-8ba9-4dba-bac5-2576a318280b-profile_image-300x300.png)
