--- a/_posts/2024-08-09-week_1.md
+++ b/_posts/2024-08-09-week_1.md
@@ -121,6 +121,4 @@ CustomDataset
 DataLoader(train_dataset, batch_size= , shuffle = )
 ```
 
-![image-20240811145221358](C:\Users\sw00h\OneDrive\문서\sun00hwn_github_blog\sun00hwn.github.io\images\2024-08-09-week_1\image-20240811145221358.png)
-
-![image-20240811145433239](/images/2024-08-09-week_1/554a3540-8ba9-4dba-bac5-2576a318280b-profile_image-300x300.png)
+![상관계수](/images/2024-08-09-week_1/상관계수.png)
