--- a/_posts/2024-08-09-week_1.md
+++ b/_posts/2024-08-09-week_1.md
@@ -1,8 +1,6 @@
 ---
 layout: single
 title:  "주간학습정리 Pytorch"
-
-typora-root-url:../
 ---
 #### 배운 내용을 필요할 때 찾아볼 수 있게 가이드북 형태로 작성
 ### 수정 예정
@@ -122,4 +120,7 @@ CustomDataset
 DataLoader(train_dataset, batch_size= , shuffle = )
 ```
 
-![상관계수](/images/2024-08-09-week_1/상관계수.png)
+# test
+
+![image-20240811150953103](../images/2024-08-09-week_1/image-20240811150953103.png)
+
