--- a/_posts/2024-08-09-week_1.md
+++ b/_posts/2024-08-09-week_1.md
@@ -99,7 +99,57 @@ def forward(self, x):
   return y
 ```
 
+#### 상관계수
+
+1. 두 변수 간의 선형 관계 분석 (표본상관계수)
+
+   `np.corrcoef(x, t)`
+
+   ```
+   np.corrcoef(x, t)
+   ```
+
+![image-20240811151755456](../images/2024-08-09-week_1/image-20240811151755456.png)
+
+- 선형 회귀 모델에서 학습이란 y = wx + b 의 기울기(가중치) w와 y절편(바이어스) b 를 찾는 과정
+- 신경만 관점에서 선형 회귀 모델은 입력층의 특징 변수가 출력층의 예측 변수로 mapping 되는 과정
+
+### nn.Module 
+
+- nn.Module 은 일관성, 모듈화의 장점을 지님
+
+`import torch.nn as nn` 
+
+`class LinearRegressionModel(nn.Module): # 클래스 생성`
+
+`model = LinearRegressionModel() # 인스턴스 생성 `
+
+- 매서드
+
+  `def __init__(self):` 생성자 매서드
+
+  `super(LinearRegressionModel, self).__init__()` 부모 클래스 생성자 호출
+
+  `self.linear = nn.Linear(1,1)` 클래스 속성 코드
+
+  `def forward(self, x):` 순전파 매서드
+
+  ​	`y = self.linear(x)`
+
+  
+
+#### 손실 함수 (loss function)
+
+- MSE(Mean Squared Error)
+
+  `loss_function = nn.MSELoss()`
+
+![image-20240811152239207](../images/2024-08-09-week_1/image-20240811152239207.png)
+
+
+
 ### 경사하강법, SGD 작동 원리 이해
+
 ```python
 import torch.optim as optim
 optimizer = optim.SGD(model.parameters(), lr=0.01)
@@ -120,7 +170,7 @@ CustomDataset
 DataLoader(train_dataset, batch_size= , shuffle = )
 ```
 
-# test
+#### # 블로그 이미지 삽입 테스트중
 
 ![image-20240811150953103](../images/2024-08-09-week_1/image-20240811150953103.png)
 
