--- a/_posts/2024-08-16-week_2.md
+++ b/_posts/2024-08-16-week_2.md
@@ -303,7 +303,7 @@ $$
 
   **셀프 어텐션 (Self-Attention)**: 셀프 어텐션은 **동일한 시퀀스 내**에서 각 요소가 **다른 모든 요소들**과의 연관성을 계산함
 
-<img src="https://gaussian37.github.io/assets/img/dl/concept/transformer/0.png" alt="Transformer 모델 (Attention is all you need) - gaussian37" style="zoom:50%;" />
+<img src="../images/2024-08-16-week_2/image-20240820101649949.png" alt="image-20240820101649949" style="zoom: 67%;" /><img src="https://gaussian37.github.io/assets/img/dl/concept/transformer/0.png" alt="Transformer 모델 (Attention is all you need) - gaussian37" style="zoom:50%;" />
 
 - ##### 잔차 연결(Residual connection) 	
 
