--- a/_posts/2024-08-16-week_2.md
+++ b/_posts/2024-08-16-week_2.md
@@ -1,7 +1,8 @@
----
-layout: single
-title:  "주간학습정리 ML LifeCycle"
----
+- ---
+  layout: single
+  title:  "주간학습정리 ML LifeCycle"
+  ---
+
 
 ## Backpropagation
 
@@ -258,23 +259,18 @@ X /= np.std(X, axis=0) # Normalization
 
 `Attention(Q, K, V) = Attention Value`
 
-<img src="https://cdn.discordapp.com/attachments/1269888098188394518/1274904282021367850/image.png?ex=66c3f2a3&is=66c2a123&hm=3bf126825b9f2c2cdbf0a768083e39dfefee934c9f1b9387634fa737f37e25e6&" alt="img" style="zoom: 33%;" /><img src="https://cdn.discordapp.com/attachments/1269888098188394518/1274904776265568347/image.png?ex=66c3f319&is=66c2a199&hm=e4a0059b186db414f492f056967acfcb27bd4f998dd3e1434852ac67f709821c&" alt="img" style="zoom: 33%;" />
-$$
-입력 시퀀스 = x_1,x_2,x_3,...,x_n \\ h_i = W_h⋅x_i \\ \\
-Q_i = W_Q⋅h_i \\ K_i = W_k⋅h_i \\ V_i=W_v⋅h_i
-$$
+<img src="https://cdn.discordapp.com/attachments/1269888098188394518/1274904282021367850/image.png?ex=66c3f2a3&is=66c2a123&hm=3bf126825b9f2c2cdbf0a768083e39dfefee934c9f1b9387634fa737f37e25e6&" alt="img" style="zoom: 33%;" /><img src="https://cdn.discordapp.com/attachments/1269888098188394518/1274904776265568347/image.png?ex=66c3f319&is=66c2a199&hm=e4a0059b186db414f492f056967acfcb27bd4f998dd3e1434852ac67f709821c&" alt="img" style="zoom: 33%;" />![image-20240820112502329](../images/2024-08-16-week_2/image-20240820112502329.png
 
-$$
-score_{1i} = Q_1K_i \\ 
-α_{1i} = Softmax(score_{1i}) \\
-z_1 = \sum α_{1i} V_i \\
-output = W_o ⋅ z_1
-$$
+​	수식![image-20240820112526795](../images/2024-08-16-week_2/image-20240820112526795.png)![image-20240820112533911](../images/2024-08-16-week_2/image-20240820112533911.png)![image-20240820112544466](../images/2024-08-16-week_2/image-20240820112544466.png)
+
+------
+
+
 
 
 ## Transformers
 
-
+<img src="https://gaussian37.github.io/assets/img/dl/concept/transformer/0.png" alt="Transformer 모델 (Attention is all you need) - gaussian37" style="zoom:50%;" />
 
 - ##### 포지셔널 인코딩(Positional Encoding)
 
@@ -297,13 +293,35 @@ $$
 
 
 
-- ##### 멀티 헤드 어텐션(Multi-head Attention)
+- ##### Self-Attention
 
-  **어텐션 (Attention)**: 일반적인 어텐션 메커니즘은 두 개의 다른 시퀀스 사이의 연관성을 계산함.
+> Linear Layer
+>
+> Attention Score
+>
+> Scaling & Softmax
+> $$
+> \begin{align*}
+> Attention(Q,K,V) = softmax \left(\frac{Q⋅K^T}{\sqrt{d_k}} \right)V
+> \end{align*}
+> $$
+> 
 
-  **셀프 어텐션 (Self-Attention)**: 셀프 어텐션은 **동일한 시퀀스 내**에서 각 요소가 **다른 모든 요소들**과의 연관성을 계산함
+<img src="../images/2024-08-16-week_2/image-20240820113127000.png" alt="image-20240820113127000" style="zoom: 50%;" /><img src="../images/2024-08-16-week_2/image-20240820113030268.png" alt="image-20240820113030268" style="zoom:67%;" />
 
-<img src="../images/2024-08-16-week_2/image-20240820101649949.png" alt="image-20240820101649949" style="zoom: 67%;" /><img src="https://gaussian37.github.io/assets/img/dl/concept/transformer/0.png" alt="Transformer 모델 (Attention is all you need) - gaussian37" style="zoom:50%;" />
+
+
+​	**(Attention)**: 일반적인 어텐션 메커니즘은 두 개의 다른 시퀀스 사이의 연관성을 계산함.
+
+​	**(Self-Attention)**: 셀프 어텐션은 **동일한 시퀀스 내**에서 각 요소가 **다른 모든 요소들**과의 연관성을 계산함.
+
+- 멀티 헤드 어텐션(Multi-head Attention)
+
+  Self-Attention 을 병렬로 h번 학습하는 구조
+
+  <img src="https://production-media.paperswithcode.com/methods/multi-head-attention_l1A3G7a.png" alt="Multi-Head Attention Explained | Papers With Code" style="zoom: 33%;" /><img src="../images/2024-08-16-week_2/image-20240820101649949.png" alt="image-20240820101649949" style="zoom: 67%;" />
+
+
 
 - ##### 잔차 연결(Residual connection) 	
 
