--- a/_posts/2024-08-16-week_2.md
+++ b/_posts/2024-08-16-week_2.md
@@ -50,7 +50,7 @@ use_math: true
 
 ### ReLU (Rectified Linear Unit)
 
-$ReLU(x) = max(0,x)$
+​	$ReLU(x) = max(0,x)$
 
 > ##### 특징
 
@@ -133,9 +133,9 @@ $ReLU(x) = max(0,x)$
 
    - 모든 레이어들에 대해서 activation이 적당한 크기를 가짐
 
-4. He Initialization 
+4. He Normal Initialization 
 
-<img src="https://cdn.discordapp.com/attachments/1269888098188394518/1273515414504083466/image.png?ex=66bf8de7&is=66be3c67&hm=a5b49422e664ae8d1434c488f297577708192579fe4eca446db8dbfea6ec6621&" alt="img" style="zoom:80%;" />
+   $W \sim N\left(0,\frac{2}{n_{in}} \right)$
 
 > 앞이 평균, 뒤가 분산
 
@@ -258,7 +258,7 @@ X /= np.std(X, axis=0) # Normalization
 
 ## Atention
 
-`Attention(Q, K, V) = Attention Value`
+​	`Attention(Q, K, V) = Attention Value`
 
 <img src="https://cdn.discordapp.com/attachments/1269888098188394518/1274904282021367850/image.png?ex=66c3f2a3&is=66c2a123&hm=3bf126825b9f2c2cdbf0a768083e39dfefee934c9f1b9387634fa737f37e25e6&" alt="img" style="zoom: 33%;" /><img src="https://cdn.discordapp.com/attachments/1269888098188394518/1274904776265568347/image.png?ex=66c3f319&is=66c2a199&hm=e4a0059b186db414f492f056967acfcb27bd4f998dd3e1434852ac67f709821c&" alt="img" style="zoom: 33%;" />
 
@@ -271,24 +271,26 @@ X /= np.std(X, axis=0) # Normalization
 
 ## Transformers
 
-<img src="https://gaussian37.github.io/assets/img/dl/concept/transformer/0.png" alt="Transformer 모델 (Attention is all you need) - gaussian37" style="zoom:50%;" />
+<img src="https://gaussian37.github.io/assets/img/dl/concept/transformer/0.png" alt="Transformer 모델 (Attention is all you need) - gaussian37" style="zoom: 67%;" />
 
 - ##### 포지셔널 인코딩(Positional Encoding)
 
 > 트랜스포머는 단어의 위치 정보를 얻기 위해서 각 단어의 임베딩 벡터에 위치 정보들을 더하여 모델의 입력으로 사용하는데, 이를 포지셔널 인코딩(positional encoding)이라고 합니다.
 
-<img src="https://wikidocs.net/images/page/31379/transformer6_final.PNG" alt="img"  <img src="https://kikaben.com/transformers-positional-encoding/images/pos-encoding-plus-word-embedding.png" alt="KiKaBeN - Transformer's Positional Encoding" style="zoom: 50%;" />
+<img src="https://wikidocs.net/images/page/31379/transformer6_final.PNG" alt="img" style="zoom: 80%;" />
+
+<img src="https://kikaben.com/transformers-positional-encoding/images/pos-encoding-plus-word-embedding.png" alt="KiKaBeN - Transformer's Positional Encoding" style="zoom: 50%;" />
 
 
 
 > 트랜스포머는 사인 함수와 코사인 함수의 값을 임베딩 벡터에 더해주므로서 단어의 순서 정보를 더하여 줍니다.
 
-$PE_{(pos, 2i)} = sin(pos/10000^{2i/d_{model}})$
-$PE_{(pos, 2i+1)} = cos(pos/10000^{2i/d_{model}})$
+​	$PE_{(pos, 2i)} = sin(pos/10000^{2i/d_{model}})$
+​	$PE_{(pos, 2i+1)} = cos(pos/10000^{2i/d_{model}})$
 
 
 
-임베딩 벡터 내의 각 차원의 인덱스가 짝수인 경우에는 사인 함수의 값을 사용하고 홀수인 경우에는 코사인 함수의 값을 사용합니다.
+​	임베딩 벡터 내의 각 차원의 인덱스가 짝수인 경우에는 사인 함수의 값을 사용하고 홀수인 경우에는 코사인 함수의 	값을 사용합니다.
 
 
 
@@ -302,7 +304,7 @@ $PE_{(pos, 2i+1)} = cos(pos/10000^{2i/d_{model}})$
 
 
 
-$Attention(Q,K,V) = softmax \left(\frac{Q⋅K^T}{\sqrt{d_k}} \right)V$
+​	$Attention(Q,K,V) = softmax \left(\frac{Q⋅K^T}{\sqrt{d_k}} \right)V$
 
 <img src="../images/2024-08-16-week_2/image-20240820113127000.png" alt="image-20240820113127000" style="zoom: 50%;" /><img src="../images/2024-08-16-week_2/image-20240820113030268.png" alt="image-20240820113030268" style="zoom:67%;" />
 
@@ -316,26 +318,25 @@ $Attention(Q,K,V) = softmax \left(\frac{Q⋅K^T}{\sqrt{d_k}} \right)V$
 
   Self-Attention 을 병렬로 h번 학습하는 구조
 
-  <img src="https://production-media.paperswithcode.com/methods/multi-head-attention_l1A3G7a.png" alt="Multi-Head Attention Explained | Papers With Code" style="zoom: 33%;" /><img src="../images/2024-08-16-week_2/image-20240820101649949.png" alt="image-20240820101649949" style="zoom: 67%;" />
+  <img src="https://production-media.paperswithcode.com/methods/multi-head-attention_l1A3G7a.png" alt="Multi-Head Attention Explained | Papers With Code" style="zoom: 33%;" /><img src="../images/2024-08-16-week_2/image-20240820101649949.png" alt="image-20240820101649949" style="zoom: 50%;" />
 
 
 
 - ##### 잔차 연결(Residual connection) 	
 
-$H(x) = x + Multi　head　Attention(x)$
+​	$H(x) = x + Multi　head　Attention(x)$
 
 <img src="../images/2024-08-16-week_2/image-20240819205140234.png" alt="image-20240819205140234" style="zoom:67%;" />
 
 - ##### Layer Normalization
 
-$LN = LayerNorm(x+Sublayer(x))$
+​	$LN = LayerNorm(x+Sublayer(x))$
 
-층 정규화는 **텐서의 마지막 차원**에 대해서 평균과 분산을 구하고, 이를 가지고 어떤 수식을 통해 값을 정규화하여 학습을 돕습니다. 
+​	층 정규화는 **텐서의 마지막 차원**에 대해서 평균과 분산을 구하고, 이를 가지고 어떤 수식을 통해 값을 정규화하여 학	습을 돕습니다. 
 
 ![img](https://wikidocs.net/images/page/31379/layer_norm_new_1_final.PNG)
 
-층 정규화를 위해서 우선, 화살표 방향으로 각각 평균 μ과 분산 σ2을 구해야 한다.
+​	층 정규화를 위해서 우선, 화살표 방향으로 각각 평균 μ과 분산 σ2을 구해야 한다.
 
-$ln_i = LayerNorm(x_i)$
-
+​	$ln_i = LayerNorm(x_i)$
 
