--- a/_posts/2024-08-16-week_2.md
+++ b/_posts/2024-08-16-week_2.md
@@ -12,7 +12,7 @@ use_math: true
 
 <img src="https://serokell.io/files/a0/a05ov1m.Backpropagation_in_NN_pic1.jpg" alt="What is backpropagation in neural networks?" style="zoom: 50%;" />
 
-<img src="https://cdn.discordapp.com/attachments/1269888098188394518/1273101752593285170/image.png?ex=66bf5e26&is=66be0ca6&hm=643fff10e6337eadb4b2e4343c97095528f389de22e6bbdb8a75e88016195ee8&" alt="img" style="zoom:50%;" />
+![image-20240822132930436](../images/2024-08-16-week_2/image-20240822132930436.png)
 
 ## 활성화 함수(activation function) 단점
 
@@ -20,7 +20,7 @@ use_math: true
 
    - sigmoid는 1과 0사이의 값으로 나오기 때문에 입력 값이 크거나 작을때 기울기가 0이 됨
 
-     <img src="https://cdn.discordapp.com/attachments/1269888098188394518/1273117253633704057/image.png?ex=66bf6c96&is=66be1b16&hm=6d9a06c864496f75df5709ac1b996a991a9ae68eed409e238a070340b210e2bf&" alt="img" style="zoom:67%;" />
+     ![image-20240822132944488](../images/2024-08-16-week_2/image-20240822132944488.png)
 
      
 
@@ -34,9 +34,7 @@ use_math: true
 
 - exp() 계산이 어렵다
 
-![img](https://cdn.discordapp.com/attachments/1269888098188394518/1273109296347091004/image.png?ex=66bf652d&is=66be13ad&hm=27b41712e889634a5ed38f5a01260e9ae736d4d370198d73192d0b1c6194dfb8&)
-
-
+​	$ \frac{\partial \sigma (x)}{\partial x} = \sigma (x)(1 - \sigma(x)) $
 
 ### Tanh Functions 
 
@@ -66,7 +64,7 @@ use_math: true
 - x = 0 일때 미분 불가능
 - 음수 입력의 경우 기울기가 0이 되어, 해당 뉴런이 학습되지 않을 수 있습니다. 이를 "dying ReLU" 문제라고 합니다.
 
-<img src="https://cdn.discordapp.com/attachments/1269888098188394518/1273115941126799434/image.png?ex=66bf6b5d&is=66be19dd&hm=de568ec28b3e241b5b71ba1369b8c65b18b52795ea50417febbd190da5f99bb7&" alt="img" style="zoom: 50%;" />
+![image-20240822133411390](../images/2024-08-16-week_2/image-20240822133411390.png)
 
 ### Leaky ReLU
 
@@ -79,7 +77,7 @@ use_math: true
 
 - 추가적인 하이퍼파라미터 (x가 0 미만일 때의 기울기)
 
-<img src="https://cdn.discordapp.com/attachments/1269888098188394518/1273118024647573525/image.png?ex=66bf6d4e&is=66be1bce&hm=476ec0ed39ff1bd57b30fcc9e6a68637d916bd91b206511cc47d09588e6bea5d&" alt="img" style="zoom:50%;" />
+![image-20240822133424289](../images/2024-08-16-week_2/image-20240822133424289.png)
 
 ### ELU (Exponential Linear Unit)
 
@@ -93,7 +91,7 @@ use_math: true
 
 - exp() 의 연산이 비쌈 (Exponential  미분 복잡)
 
-<img src="https://cdn.discordapp.com/attachments/1269888098188394518/1273118600303087733/image.png?ex=66bf6dd7&is=66be1c57&hm=7f088d9bde3c61d9205631329580e8d47d5070fc9d8a974d392072a01955edce&" alt="img" style="zoom:50%;" />
+![image-20240822133435251](../images/2024-08-16-week_2/image-20240822133435251.png)
 
 ## Weight initialization
 
@@ -150,7 +148,7 @@ use_math: true
 - Learning Rate Decay : 처음에 큰 학습률을 사용하다 최적의 해에 접근하기 위해서 점점 작은 학습률을 사용함.
 - Learning Rate Decay 같은 여러 기법과 경험을 통해 최적의 학습률을 찾는게 중요함
 
-<img src="https://cdn.discordapp.com/attachments/1269888098188394518/1273122324857487380/image.png?ex=66bf714f&is=66be1fcf&hm=14ec1e693986a0b9496ec7b1cf80e5b8559896ee58e6d78fbb51e56bddaf97a7&" alt="img" style="zoom:50%;" />
+![image-20240822133457088](../images/2024-08-16-week_2/image-20240822133457088.png)
 
 ## Data Preprocessing
 
@@ -166,13 +164,13 @@ X /= np.std(X, axis=0) # Normalization
 - weight의 작은 변화에 덜 민감해집니다
 - optimize하기 쉬워진다
 
-<img src="https://cdn.discordapp.com/attachments/1269888098188394518/1273146860093308938/image.png?ex=66bf8829&is=66be36a9&hm=508479bc9b716cbb13bc473a33175fcfa4c8f0c479e2c8e5ad165ca2508f3eff&" alt="img" style="zoom: 50%;" />
+![image-20240822133513947](../images/2024-08-16-week_2/image-20240822133513947.png)
 
 ### PCA(Principal Component Analysis) 주성분 분석
 
 - 고차원 데이터 집합이 주어졌을 때 원래의 고차원 데이터와 가장 비슷하면서 더 낮은 차원 데이터를 찾아내는 방법 (차원 축소 라고도 함)
 
-<img src="https://cdn.discordapp.com/attachments/1269888098188394518/1273148832317964310/principal-component-analysis-pca-featured.png?ex=66bf89ff&is=66be387f&hm=c477b62cfe64452ce9084812d40db041429089f84f4e059fdd6644118d3d5aa6&" alt="img" style="zoom:33%;" />
+![image-20240822133527606](../images/2024-08-16-week_2/image-20240822133527606.png)
 
 ### Whitening
 
@@ -184,7 +182,7 @@ X /= np.std(X, axis=0) # Normalization
 
 - whitened data:  차원은 고유값에 의해 추가로 조정되어 데이터 공분산 행렬이 단위 행렬로 변환됩니다. 기하학적으로 이는 데이터를 등방성 가우스 블롭으로 늘리고 압축하는 것과 같습니다.
 
-<img src="https://cdn.discordapp.com/attachments/1269888098188394518/1273150870367764521/preprocessing-2.png?ex=66bf8be5&is=66be3a65&hm=65092ccc5100e542b41a5c25cf84ef46e11c54fa38d524d892efc65fa84298d1&" alt="img" style="zoom: 50%;" />
+![image-20240822133543595](../images/2024-08-16-week_2/image-20240822133543595.png)
 
 ### Data Augmentation
 - ML 모델은 초기 훈련 시에는 크고 다양한 데이터 세트를 필요로 하지만, 데이터 사일로, 관련 규정 및 기타 제한으로 인해 충분한 다양성을 갖춘 실제 데이터 세트를 소싱하기가 어려울 수 있습니다.
@@ -204,7 +202,7 @@ X /= np.std(X, axis=0) # Normalization
 - 시계열 데이터를 처리하기 위한 모델
 - RNN은 은닉층의 노드에서 활성화 함수를 통해 나온 결과값을 출력층 방향으로도 보내면서, 다시 은닉층 노드의 다음 계산의 입력으로 보내는 특징을 갖고있습니다.
 
-<img src="https://cdn.discordapp.com/attachments/1269888098188394518/1273544945927458899/image.png?ex=66bfa968&is=66be57e8&hm=bda9c16aeef3d62ebfb6b2f131ed2a97658cfa085687903a2421c657a7c5a8c2&" alt="img" style="zoom: 80%;" />
+![image-20240822133600168](../images/2024-08-16-week_2/image-20240822133600168.png)
 
 ### RNN 장점
 - 가변적인길이의 input sequence를 처리할 수 있음
@@ -218,13 +216,21 @@ X /= np.std(X, axis=0) # Normalization
 
 - 기울기 소실(Vanashing Gradient)
 
-  <img src="https://cdn.discordapp.com/attachments/1269888098188394518/1273556596638613545/image.png?ex=66bfb442&is=66be62c2&hm=fe630e3c520e00134c7b39274342dd3f71873826622db4c1b862b6a162298f63&" alt="img" style="zoom:67%;" />
+  > $\frac{\partial h_t }{\partial z_t} = \frac{\partial tanh(z_t) }{\partial z_t}= 1-tanh^2(z_t)=1-h^2_t$
+  >
+  > $\frac{\partial z_t }{\partial h_{t-1}} = W_{hh}$
+  >
+  > $\frac{\partial h_t }{\partial h_{t-1}}=\frac{\partial h_t}{\partial z_t}·\frac{\partial z_t}{\partial h_{t-1}}=(1-h^2_t)·W_{hh}$
 
-  <img src="https://cdn.discordapp.com/attachments/1269888098188394518/1273556617895350293/image.png?ex=66bfb447&is=66be62c7&hm=ea9f77329da983342aa0668b2fee9b0b85b4d93376362522b7962042b8a69c51&" alt="img" style="zoom:67%;" />
-
-  <img src="https://cdn.discordapp.com/attachments/1269888098188394518/1273556644965519443/image.png?ex=66bfb44d&is=66be62cd&hm=15f3c226d8b44db91877cb243f8d6030f543b857c53a615333d708649ee32d15&" alt="img" style="zoom:67%;" />
-
-  <img src="https://cdn.discordapp.com/attachments/1269888098188394518/1273556787399884840/image.png?ex=66bfb46f&is=66be62ef&hm=19d87a18319debfe6652a48355c3ff57b58dd44b3154342404cc3bbf0e7373c2&" alt="img" style="zoom: 80%;" />
+  ​	
+  
+  
+  
+  
+  
+  
+  
+  ![image-20240822133615501](../images/2024-08-16-week_2/image-20240822133615501.png)
 
 ------
 
@@ -260,9 +266,21 @@ X /= np.std(X, axis=0) # Normalization
 
 ​	`Attention(Q, K, V) = Attention Value`
 
-<img src="https://cdn.discordapp.com/attachments/1269888098188394518/1274904282021367850/image.png?ex=66c3f2a3&is=66c2a123&hm=3bf126825b9f2c2cdbf0a768083e39dfefee934c9f1b9387634fa737f37e25e6&" alt="img" style="zoom: 33%;" /><img src="https://cdn.discordapp.com/attachments/1269888098188394518/1274904776265568347/image.png?ex=66c3f319&is=66c2a199&hm=e4a0059b186db414f492f056967acfcb27bd4f998dd3e1434852ac67f709821c&" alt="img" style="zoom: 33%;" />
+![image-20240822133644000](../images/2024-08-16-week_2/image-20240822133644000.png)![image-20240822133652499](../images/2024-08-16-week_2/image-20240822133652499.png)
 
-​	수식![image-20240820112526795](../images/2024-08-16-week_2/image-20240820112526795.png)![image-20240820112533911](../images/2024-08-16-week_2/image-20240820112533911.png)![image-20240820112544466](../images/2024-08-16-week_2/image-20240820112544466.png)
+> $input_{sequence} = x_1,x_2,x_3,...,(x_n)$  ,  $h_i = W_h·x_i$
+>
+>  $Q_i = W_Q·h_i$  ,  $K_i = W_k·h_i$  ,   $V_i = W_v·h_i$
+>
+> $score_{1i} = Q_1K_i$
+>
+> $\alpha_{1i} = Softmax(score_{1i})$
+>
+> $z_1 = \sum \alpha_{1i} V_i$
+>
+> $output = W_o·z_1$
+
+
 
 ------
 
