--- a/_posts/2024-08-30-week_4.md
+++ b/_posts/2024-08-30-week_4.md
@@ -63,7 +63,9 @@ $p(n) = \begin{Bmatrix} 1-p \quad for\;n = 0\\p \quad for\;n = 1 \\\end{Bmatrix}
 
 ## 5. Poisson Distribution (포아송분포)
 
-<img src="../images/2024-08-30-week_4/Poisson_pmf.svg" alt="Poisson_pmf"  />
+
+
+<img src="../images/2024-08-30-week_4/Poisson_pmf.svg.png" alt="Poisson_pmf.svg" style="zoom:150%;" />
 
 > ###### By Skbkekas - 자작, CC BY 3.0, https://commons.wikimedia.org/w/index.php?curid=9447142
 
